--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <html>
-    <head>
-        <title>React</title>
-        <script src="https://fb.me/react-0.14.5.js"></script>
-        <script src="https://fb.me/react-dom-0.14.5.js"></script>
-        <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" rel="stylesheet">
-    </head>
-    <body>
-        <div class="container"></div>
-        <script src="main.js"></script>
-    </body>
+  <head>
+    <title>React</title>
+    <script src="https://fb.me/react-0.14.5.js"></script>
+    <script src="https://fb.me/react-dom-0.14.5.js"></script>
+    <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" rel="stylesheet">
+
+    <style media="screen">
+      .btn .caret {
+        margin-left: 5px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container"></div>
+    <script src="main.js"></script>
+  </body>
 </html>
